Fixed Java 8 compatibility.